[package]
edition = "2021"
name = "beacon-std-lib"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
hifitime = "3.9.0"
lazy_static = "1.4.0"
serde = {version = "1.0.138", features = ["derive", "rc"]}
